smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/namespace/namespace-before-traits.smithy
// Parse error at line 2, column 1 near `@i`: Expected a namespace definition, but found unexpected syntax
@invalid
